--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -218,7 +218,7 @@ jobs:
 
     strategy:
       matrix:
-        services:
+        include:
           - name: background-jobs
             dockerfile: docker/Dockerfile.background-jobs
             context: .
