--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,16 +6,12 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "clean": "rm -rf .turbo node_modules dist"
   },
   "devDependencies": {
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tsup": "^8.1.0"
   },
   "peerDependencies": {
@@ -23,9 +19,6 @@
     "react-dom": "^19.1.1"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "framer-motion": "^12.23.24",
     "tailwind-merge": "^3.4.0"
   }
 }
