--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,60 +15,63 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@lexical/react": "^0.39.0",
+    "@react-router/express": "7.12.0",
     "@react-router/fs-routes": "^7.9.5",
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
+    "@react-router/node": "^7.12.0",
+    "@react-router/serve": "^7.12.0",
     "@remix-run/file-storage": "^0.13.0",
     "@remix-run/form-data-parser": "^0.14.0",
     "@tanstack/react-virtual": "^3.13.12",
     "clsx": "^2.1.1",
+    "compression": "^1.8.1",
     "cross-env": "^10.1.0",
-    "date-fns": "^4.1.0",
+    "db": "workspace:*",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.24",
+    "immich": "workspace:*",
     "isbot": "^5.1.31",
     "lexical": "^0.39.0",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.1",
     "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
-    "react-intersection-observer": "^10.0.0",
-    "react-router": "^7.9.2",
-    "react-router-dom": "^7.9.5",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.9",
-    "@react-router/express": "7.12.0",
-    "compression": "^1.8.1",
-    "express": "^5.1.0",
-    "morgan": "^1.10.1",
     "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-router": "^7.12.0",
+    "react-router-dom": "^7.9.5",
+    "search": "workspace:*",
+    "semver": "^7.7.3",
+    "shared": "workspace:*",
     "socket.io-client": "^4.8.3",
-    "semver": "^7.7.1"
+    "ui": "workspace:*",
+    "vector": "workspace:*",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@playwright/test": "^1.57.0",
-    "@react-router/dev": "^7.9.2",
+    "@react-router/dev": "^7.12.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.3",
+    "@types/express-serve-static-core": "^5.0.7",
     "@types/lodash": "^4.17.21",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^22.0.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/semver": "^7.7.1",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
-    "prisma": "6.19.0",
     "tailwindcss": "^4.1.16",
     "typescript": "5.9.2",
     "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@types/compression": "^1.8.1",
-    "@types/express": "^5.0.3",
-    "@types/express-serve-static-core": "^5.0.7",
-    "@types/morgan": "^1.9.10",
-    "@faker-js/faker": "^10.2.0",
-    "@types/semver": "^7.7.1"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
