--- a/docker/docker-compose.cuda.yml
+++ b/docker/docker-compose.cuda.yml
@@ -8,6 +8,8 @@ services:
       args:
         NODE_VERSION: 22.20.0
         PNPM_VERSION: 10.20.0
+        CUDA_VERSION: 12.1.1
+        TARGET_BASE: base-gpu
     image: edit-mind-background-jobs:latest-gpu
     container_name: edit-mind-background-jobs
     env_file:
@@ -126,6 +128,8 @@ services:
       dockerfile: docker/Dockerfile.ml
       args:
         PYTHON_VERSION: 3.11
+        CUDA_VERSION: 12.1.1
+        TARGET_BASE: base-gpu
     image: edit-mind-ml:latest-gpu
     container_name: edit-mind-ml
     env_file:
