--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,11 +15,14 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc -b",
+    "seed": "node --import tsx/esm dist/seed.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "nanoid": "^5.1.6"
+    "nanoid": "^5.1.6",
+    "prisma": "workspace:*",
+    "shared": "workspace:*"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6"
