--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b --force",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
@@ -20,16 +20,12 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "dependencies": {
-    "@types/ws": "^8.18.1",
-    "date-fns": "^4.1.0",
-    "db": "workspace:*",
-    "ioredis": "^5.9.2",
-    "zod": "^4.1.12",
     "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/ws": "^8.18.1",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
