--- a/packages/smart-collections/package.json
+++ b/packages/smart-collections/package.json
@@ -15,12 +15,14 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc -b --force"
   },
   "dependencies": {
     "db": "workspace:*",
     "shared": "workspace:*",
-    "vector": "workspace:*"
+    "vector": "workspace:*",
+    "embedding-core": "workspace:*",
+    "embedding-media": "workspace:*"
   },
   "devDependencies": {}
 }
