fix: use the official chroma default embedding function

--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -19,8 +19,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.9",
     "chromadb": "^3.0.17",
-    "chromadb-default-embed": "^2.14.0",
     "shared": "workspace:*"
   }
 }
