--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,13 +1,13 @@
 ARG NODE_VERSION=22.20.0
 ARG PNPM_VERSION=10.20.0
 
-FROM node:${NODE_VERSION}-alpine AS base
+FROM node:${NODE_VERSION}-bookworm-slim AS base
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
-RUN apk add --no-cache \
-  libc6-compat \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  curl \
   openssl \
   ca-certificates \
   && corepack enable \
@@ -54,7 +54,7 @@ COPY turbo.json ./
 RUN pnpm --filter prisma generate
 
 RUN pnpm run build:web
-RUN pnpm rebuild @tailwindcss/oxide rollup
+RUN pnpm rebuild @tailwindcss/oxide rollup onnxruntime-node
 
 FROM base AS production
 
