--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   openssl \
   ffmpeg \
   curl \
+  libgomp1 \
   ca-certificates \
   && corepack enable \
   && corepack prepare pnpm@${PNPM_VERSION} --activate
@@ -24,8 +25,9 @@ ENV PATH="$PNPM_HOME:$PATH"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   curl \
+  libgomp1 \
   ca-certificates \
-  && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+  && curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION} | bash - \
   && apt-get install -y nodejs \
   && corepack enable \
   && corepack prepare pnpm@${PNPM_VERSION} --activate \
