--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -8,6 +8,7 @@ ENV PATH="$PNPM_HOME:$PATH"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   curl \
+  libgomp1 \
   openssl \
   ca-certificates \
   && corepack enable \
