--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -56,6 +56,7 @@ RUN pnpm --filter prisma generate
 
 RUN pnpm run build:web
 RUN pnpm rebuild @tailwindcss/oxide rollup onnxruntime-node
+RUN pnpm --filter web typecheck
 
 FROM base AS production
 
