--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,7 @@ jobs:
           context: ${{ matrix.service.context }}
           file: ${{ matrix.service.dockerfile }}
           target: ${{ matrix.service.target }}
-          platforms: ${{ contains(matrix.service.target, 'gpu') && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
+          platforms: ${{ contains(matrix.service.tag, 'gpu') && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
           build-args: ${{ matrix.service.args }}
           push: false
           cache-from: type=gha,scope=${{ matrix.service.name }}-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-cuda.txt') }}
@@ -296,7 +296,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: ${{ contains(matrix.service.target, 'gpu') && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
+          platforms: ${{ contains(matrix.service.tag, 'gpu') && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
 
       - name: Extract metadata
         id: meta
