--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,7 +131,7 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile.ml
-          target: production
+          target: production-gpu
           platforms: linux/amd64
           build-args: |
             PYTHON_VERSION=${{ env.PYTHON_VERSION }}
