fix: minor updates for thumbnail generation and docker cuda file

--- a/docker/docker-compose.cuda.yml
+++ b/docker/docker-compose.cuda.yml
@@ -2,7 +2,7 @@ services:
   background-jobs:
     restart: unless-stopped
     build:
-      target: production-gpu
+      target: production
       context: ..
       dockerfile: docker/Dockerfile.background-jobs
       args:
