--- a/packages/embedding-core/package.json
+++ b/packages/embedding-core/package.json
@@ -19,7 +19,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@xenova/transformers": "^2.17.2",
+    "@huggingface/transformers": "^3.8.1",
     "shared": "workspace:*",
     "vector": "workspace:*"
   }
