--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ../.data:/app/data
+      - ml-models:/app/ml-models:rw
   web:
     restart: unless-stopped
     build:
