--- a/docker/docker-compose.cuda.yml
+++ b/docker/docker-compose.cuda.yml
@@ -31,6 +31,7 @@ services:
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ../.data:/app/data
+      - ml-models:/app/ml-models:rw
   web:
     restart: unless-stopped
     build:
