--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,17 +47,6 @@ jobs:
               NODE_VERSION=22.20.0
               PNPM_VERSION=10.20.0
 
-          - name: background-jobs
-            dockerfile: docker/Dockerfile.background-jobs
-            context: .
-            target: production
-            tag: latest-gpu
-            args: |
-              NODE_VERSION=22.20.0
-              PNPM_VERSION=10.20.0
-              CUDA_VERSION=12.8.0
-              TARGET_BASE=base-gpu
-
           - name: web
             dockerfile: docker/Dockerfile.web
             context: .
@@ -103,16 +92,38 @@ jobs:
           cache-from: type=gha,scope=${{ matrix.service.name }}-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-cuda.txt') }}
           cache-to: type=gha,mode=max,scope=${{ matrix.service.name }}-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-cuda.txt') }}
 
-  build-ml-gpu:
+  build-gpu:
+    name: Build GPU Images
     runs-on: ubuntu-latest
     needs: build
     if: github.ref != 'refs/heads/main'
     permissions:
       contents: read
 
+    strategy:
+      matrix:
+        service:
+          - name: background-jobs
+            dockerfile: docker/Dockerfile.background-jobs
+            target: production
+            tag: latest-gpu
+            args: |
+              NODE_VERSION=22.20.0
+              PNPM_VERSION=10.20.0
+              CUDA_VERSION=12.8.0
+              TARGET_BASE=base-gpu
+
+          - name: ml
+            dockerfile: docker/Dockerfile.ml
+            target: production-gpu
+            tag: latest-gpu
+            args: |
+              PYTHON_VERSION=3.11
+              CUDA_VERSION=12.8.0
+              TARGET_BASE=base-gpu
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -121,22 +132,15 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:latest
-            network=host
 
-      - name: Build ML GPU
+      - name: Build GPU image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: docker/Dockerfile.ml
-          target: production-gpu
+          file: ${{ matrix.service.dockerfile }}
+          target: ${{ matrix.service.target }}
           platforms: linux/amd64
-          build-args: |
-            PYTHON_VERSION=${{ env.PYTHON_VERSION }}
-            CUDA_VERSION=${{ env.CUDA_VERSION }}
-            TARGET_BASE=base-gpu
+          build-args: ${{ matrix.service.args }}
           push: false
           cache-from: type=gha,scope=ml-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-cuda.txt') }}
           cache-to: type=gha,mode=max,scope=ml-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-cuda.txt') }}
@@ -333,8 +337,8 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
-  release-ml-gpu:
-    name: Release ML GPU Docker Image
+  release-gpu:
+    name: Release GPU Docker Images
     runs-on: ubuntu-latest
     needs: release
     if: github.ref == 'refs/heads/main'
@@ -343,6 +347,28 @@ jobs:
       id-token: write
       packages: write
       attestations: write
+
+    strategy:
+      matrix:
+        service:
+          - name: background-jobs
+            dockerfile: docker/Dockerfile.background-jobs
+            target: production
+            image_suffix: background-jobs
+            args: |
+              NODE_VERSION=22.20.0
+              PNPM_VERSION=10.20.0
+              CUDA_VERSION=12.8.0
+              TARGET_BASE=base-gpu
+
+          - name: ml
+            dockerfile: docker/Dockerfile.ml
+            target: production-gpu
+            image_suffix: ml
+            args: |
+              PYTHON_VERSION=3.11
+              CUDA_VERSION=12.8.0
+              TARGET_BASE=base-gpu
 
     steps:
       - name: Set lowercase image prefix
@@ -369,26 +395,23 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-ml
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.image_suffix }}
           tags: |
-            type=ref,event=tag        
+            type=ref,event=tag
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=raw,value=latest-gpu
 
-      - name: Build and push ML GPU Docker image
+      - name: Build and push GPU image
         id: push
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: docker/Dockerfile.ml
-          target: production-gpu
+          file: ${{ matrix.service.dockerfile }}
+          target: ${{ matrix.service.target }}
           platforms: linux/amd64
-          build-args: |
-            PYTHON_VERSION=${{ env.PYTHON_VERSION }}
-            CUDA_VERSION=${{ env.CUDA_VERSION }}
-            TARGET_BASE=base-gpu
+          build-args: ${{ matrix.service.args }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -399,6 +422,6 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-ml
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.image_suffix }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
