fix: update docker compose files

--- a/docker/docker-compose.cuda.yml
+++ b/docker/docker-compose.cuda.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ../.data:/app/data
-      - ml-models:/app/ml-models:rw
+      - ml-models:/ml-models:rw
   web:
     restart: unless-stopped
     build:
@@ -148,7 +148,7 @@ services:
       - app-network
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - ml-models:/app/ml-models:rw
+      - ml-models:/ml-models:rw
       - ../.data:/app/data
 volumes:
   redis_data:
