--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -233,7 +233,7 @@ jobs:
   release:
     name: Release Docker Images
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: read
       id-token: write
@@ -331,7 +331,7 @@ jobs:
     name: Release GPU Docker Images
     runs-on: ubuntu-latest
     needs: release
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: read
       id-token: write
